fixed spacing issues

--- a/static/styles/donation_page.css
+++ b/static/styles/donation_page.css
@@ -7,33 +7,35 @@ body {
 
 .top-container {
     max-width: 90%;
-    margin: 20px auto;
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
+    margin: 20px auto 30px;
 }
 
 .container {
     width: 90%;
     margin: 5px auto;
-
     display: flex;
     justify-content: space-between;
-    padding: 20px;
+
+}
+
+.container-left,
+.container-right {
+    width: 48%;
 }
 
 .container-left {
-    width: 43%;
     padding: 20px;
-
     background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
+    margin-right: 15px;
 }
 .container-right {
-    width: 43%;
-
+    margin-left: 15px;
 }
 
 .map-div,
